fix: reduce "more details" button width to prevent overflow in responsive layout

--- a/dev-store/src/pages/productsID/productsID.module.css
+++ b/dev-store/src/pages/productsID/productsID.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin-top: 50px;
+  margin-top: 10px;
 }
 
 .info {
